# minc4itk

./: CMakeLists.txt  README  itk-module.cmake
examples/: CMakeLists.txt  volume_2_csv.cpp
include/: itkMincGeneralTransform.h  itkMincHelpers.h  itkMincImageIO.h  itkMincImageIOFactory.h  itkMincTransformIO.h  itkMincTransformIOFactory.h  minc_helpers.h
src/: CMakeLists.txt  MINC4ITKConfig.cmake.in  itkMincHelpers.cxx  itkMincImageIO.cxx  itkMincImageIOFactory.cxx  itkMincTransformIO.cxx  itkMincTransformIOFactory.cxx
test/: CMakeLists.txt  README  itkIOTransformMincTest.cxx  itkMINCImageIOTest.cxx
tools/: CMakeLists.txt  itk_convert.cpp  itk_resample.cpp
