set(ITKIOMINC_SRC
     minc_helpers.cxx
     itkMincImageIO.cxx
     itkMincImageIOFactory.cxx
)



ADD_LIBRARY(ITKIOMINC ${ITKIOMINC_SRC})
TARGET_LINK_LIBRARIES(ITKIOMINC  ${ITKIOImageBase_LIBRARIES} ${EZMINC_LIBRARIES})

IF(itk-module)
itk_module_target(ITKIOMINC NO_INSTALL)
ENDIF(itk-module)

if(NOT ITK_INSTALL_NO_LIBRARIES)
  install(TARGETS ITKIOMINC
    EXPORT ${ITKIOMINC_INSTALL_EXPORT_NAME}
    RUNTIME DESTINATION ${ITK_INSTALL_RUNTIME_DIR} COMPONENT RuntimeLibraries
    LIBRARY DESTINATION ${ITK_INSTALL_LIBRARY_DIR} COMPONENT RuntimeLibraries
    ARCHIVE DESTINATION ${ITK_INSTALL_ARCHIVE_DIR} COMPONENT Development
    )
endif(NOT ITK_INSTALL_NO_LIBRARIES)

  
# ELSE(itk-module)
# 
#   add_library(ITKIOMINC ${ITKIOMINC_SRC})
#   
#   target_link_libraries(ITKIOMINC  
#       ${ITK_LIBRARIES}
#       itkvnl_algo
#       itkvnl
#       ${EZMINC_LIBRARIES})
#   
#   INSTALL(TARGETS ITKIOMINC ${LIBRARY_INSTALL} DESTINATION lib)
#   
# ENDIF(itk-module)
